<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Credit">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_hot_device"
            android:layout_width="wrap_content"
            android:layout_height="204dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/hot1000_device"
            tools:layout_editor_absoluteY="-4dp" />

        <TextView
            android:id="@+id/txt_title_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_credit"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/image_hot_device" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/txt_credit_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:text="@string/txt_credit_people"
            android:textSize="11.7sp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:lineSpacingMultiplier="1.1"
            android:layout_below="@+id/txt_title_credit" />

        <ImageView
            android:id="@+id/image_credit_0"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            android:layout_width="230dp"
            android:layout_height="75dp"
            android:layout_below="@+id/txt_credit_people" />

        <ImageView
            android:id="@+id/image_credit_1"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_below="@+id/image_credit_0" />

        <ImageView
            android:id="@+id/image_credit_2"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_below="@+id/image_credit_1"/>

        <ImageView
            android:id="@+id/image_credit_3"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_below="@+id/image_credit_2" />`

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button5"

            style="@style/Widget.AppCompat.Button.Borderless"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:theme="@style/MyButton"
            android:background="#e39000"
            android:layout_below="@+id/image_credit_3"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>